@@ -6,7 +6,7 @@
 
     <groupId>com.github.exobite.mc</groupId>
     <artifactId>PlaytimeRewardsRewrite</artifactId>
-    <version>0.1.7</version>
+    <version>0.1.8</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -26,6 +26,10 @@
         <repository>
             <id>minecraft-repo</id>
             <url>https://libraries.minecraft.net/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
     <pluginRepositories>
@@ -51,6 +55,10 @@
                             <pattern>org.bstats</pattern>
                             <shadedPattern>com.github.exobite.mc.playtimerewards.reloc.metrics</shadedPattern>
                         </relocation>
+                        <relocation>
+                            <pattern>hu.trigary</pattern>
+                            <shadedPattern>com.github.exobite.mc.playtimerewards.reloc.advancements</shadedPattern>
+                        </relocation>
                     </relocations>
                 </configuration>
 
@@ -60,13 +68,14 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                        <configuration>
+                        <!--<configuration>
                             <artifactSet>
                                 <includes>
                                     <include>org.bstats</include>
+                                    <include>com.github.Trigary</include>
                                 </includes>
                             </artifactSet>
-                        </configuration>
+                        </configuration> -->
                     </execution>
                 </executions>
             </plugin>
@@ -106,6 +115,12 @@
             <artifactId>placeholderapi</artifactId>
             <version>2.11.1</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Trigary</groupId>
+            <artifactId>AdvancementCreator</artifactId>
+            <version>v2.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
